# linkedin_scraper

./: .gitignore  README.rst  pyproject.toml  scrape
linkedin_scraper/: Excel.py  error.py  excel.py  info.py  main.py  scrape.py
tests/: test_excel.py  test_linkedin_scraper.py
